#2401 [Fixed] Image: Large image overflows container
reset max-inline-size in highlight box and viewer grid

--- a/packages/dso-toolkit/src/components/highlight-box/highlight-box.mixins.scss
+++ b/packages/dso-toolkit/src/components/highlight-box/highlight-box.mixins.scss
@@ -46,6 +46,7 @@
     margin-top: units.$u2 * -1;
     object-fit: cover;
     width: calc(100% + #{units.$u4});
+    max-inline-size: unset;
 
     @container (min-width: 360px) and (max-width: 470px) {
       & {
