--- a/packages/dso-toolkit/src/components/viewer-grid/viewer-grid.scss
+++ b/packages/dso-toolkit/src/components/viewer-grid/viewer-grid.scss
@@ -23,6 +23,10 @@ dso-viewer-grid {
     }
   }
 
+  img {
+    max-inline-size: unset;
+  }
+
   .dso-toggle-main-button {
     @include button.tertiary($modifiers: false);
 
